--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 </p>
                 <div class="projectType-Group">
                   <span class="projectType">Product Design</span>
-                  <span class="projectType">Internship</span>
                   <span class="projectType">Web</span>
+                  <span class="projectType">Internship</span>
                 </div>
               </div>
             </a>
@@ -165,7 +165,7 @@
           <!-- Jiyu -->
           <article>
             <a class="projectSingle locked" href="jiyu.html">
-              <img class="projectCover" src="./img/jiyu/homeCover-Jiyu.jpg" loading="lazy" alt="Jiyu cover">
+              <img class="projectCover" src="./img/jiyu/homeCover-Jiyu.jpeg" loading="lazy" alt="Jiyu cover">
               <div class="sec">
                 <h2 class="projectTitle">Jiyu <span class="projectArrow">→</span>
                 </h2>
