--- a/jiyu.html
+++ b/jiyu.html
@@ -256,7 +256,7 @@
                 with illustrations teaching the user how to measure their body.
               </p>
             </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-avatarCreation.jpg" loading="lazy"
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-avatarCreation.jpeg" loading="lazy"
               alt="Concept test avatar creation">
           </div>
           <div class="personaImg persona-2 hide">
@@ -268,7 +268,7 @@
                 functions when sliding the bottom sheet up to extend it (style selection, reviews, etc.).
               </p>
             </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-PDP.jpg" loading="lazy" alt="Concept test PDP">
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-PDP.jpeg" loading="lazy" alt="Concept test PDP">
           </div>
           <div class="personaImg persona-3 hide">
             <div class="bodyWrapper">
@@ -278,7 +278,7 @@
                 preferences.
               </p>
             </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-SearchFilter.jpg" loading="lazy"
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-SearchFilter.jpeg" loading="lazy"
               alt="Concept test search filter">
           </div>
         </div>
@@ -311,10 +311,10 @@
         <div class="marginS--top">
           <div class="twoColumn">
             <div>
-              <img class="caseStudyImg" src="./img/jiyu/logo-ideation.jpg" loading="lazy" alt="Brand image 1">
+              <img class="caseStudyImg" src="./img/jiyu/logo-ideation.jpeg" loading="lazy" alt="Brand image 1">
             </div>
             <div>
-              <img class="caseStudyImg" src="./img/jiyu/logo-animation.jpg" loading="lazy" alt="Brand image 2">
+              <img class="caseStudyImg" src="./img/jiyu/logo-animation.jpeg" loading="lazy" alt="Brand image 2">
             </div>
           </div>
         </div>
@@ -386,6 +386,37 @@
         </div>
       </div>
     </section>
+
+    <!--Sexy Mockups-->
+    <div>
+      <!--Row 1-->
+      <div class="gridCenterer">
+        <div>
+          <img class="caseStudyImg" src="./img/jiyu/00-Preview.jpeg" loading="lazy" alt="Mockup 1">
+        </div>
+        <div>
+          <img class="caseStudyImg" src="./img/jiyu/01-Many Screens.jpeg" loading="lazy" alt="Mockup 1">
+        </div>
+      </div>
+      <!--Row 2-->
+      <div class="mediaCenterer">
+        <img class="caseStudyImg" src="./img/jiyu/02-Design System.jpeg" loading="lazy" alt="Mockup 1">
+      </div>
+      <!--Row 3-->
+      <div class="gridCenterer">
+        <div>
+          <img class="caseStudyImg" src="./img/jiyu/03-Dress Up.jpeg" loading="lazy" alt="Mockup 1">
+        </div>
+        <div>
+          <img class="caseStudyImg" src="./img/jiyu/04-Style+Feel.jpeg" loading="lazy" alt="Mockup 1">
+        </div>
+      </div>
+      <!--Row 4-->
+      <!--Row 2-->
+      <div class="mediaCenterer">
+        <img class="caseStudyImg" src="./img/jiyu/05-Lookbook+Feed.jpeg" loading="lazy" alt="Mockup 1">
+      </div>
+    </div>
 
   </div>
 
