--- a/jiyu.html
+++ b/jiyu.html
@@ -112,10 +112,10 @@
                 right fashion items and size for them, so they can express themselves fully and discover their unique
                 style.
 
-                Peep the research book below for the full design process, test results and nuances behind my design
-                decisions.
+                <!-- Peep the research book below for the full design process, test results and nuances behind my design
+                decisions. -->
               </p>
-              <a href="pdf/jiyu/Tu_Jasper_Research_Book.pdf" target="_blank" class="button-DM">Research book</a>
+              <!-- <a href="pdf/jiyu/Tu_Jasper_Research_Book.pdf" target="_blank" class="button-DM">Research book</a>  -->
               <p class="marginL--top"><a href="#solution" class="button-DM">Jump to solution</a></p>
             </div>
             <!-- Right side -->
