--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jasper Tu | Product Designer</title>
+  <title>:D</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" type="image/png" href="./img/unicornCursor-36px.png">
+  <!-- <link rel="icon" type="image/png" href="./img/unicornCursor-36px.png"> -->
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -23,9 +23,7 @@
 
   <meta name="theme-color" content="#fafafa">
 
-  <!-- Typefaces: DM Sans, Sora, Nunito, Caudex -->
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <!-- Typefaces: Sora, Nunito, Caudex -->
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
     rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,16 +35,14 @@
     rel="stylesheet">
 
   <!-- SEO -->
-  <meta name="description"
-    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Former Product Design Intern at Facebook.">
+  <meta name="description" content=":D">
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:image" content="./img/peace.png"> <!-- Insert website preview image here -->
-  <meta property="og:title" content="Jasper Tu | Product Designer">
-  <meta property="og:description"
-    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Graphic and UX Design in Toronto and the GTA.">
+  <meta property="og:title" content=":D">
+  <meta property="og:description" content=":D">
   <meta property="og:url" content="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:site_name" content="Jasper Tu">
   <meta name="twitter:card" content="summary">
@@ -60,18 +56,18 @@
   <![endif]-->
 
   <!-- Top nav bar -->
-  <div id="navContainer">
-    <!-- Navigation elements -->
-    <nav>
-      <li><a class="navLogo" href="index.html">J∙TU</a></li>
+  <!--<div id="navContainer">-->
+  <!-- Navigation elements -->
+  <!--<nav>-->
+  <!--<li><a class="navLogo" href="index.html">J∙TU</a></li>
       <ul class="navLinks">
-        <li><a class="workNav" id="active" href="index.html">Work</a></li>
-        <!-- <li><a class="playNav" href="">Play</a></li> -->
-        <li><a class="aboutNav" href="about.html">About</a></li>
-        <li><a class="resumeNav" href="pdf/Jasper Tu-Resume.pdf" target="_blank">Resume</a></li>
-      </ul>
-    </nav>
-  </div>
+        <li><a class="workNav" id="active" href="index.html">Work</a></li>-->
+  <!-- <li><a class="playNav" href="">Play</a></li> -->
+  <!--<li><a class="aboutNav" href="about.html">About</a></li>
+      <li><a class="resumeNav" href="pdf/Jasper Tu-Resume.pdf" target="_blank">Resume</a></li>
+      </ul>-->
+  <!--</nav>-->
+  <!--</div>-->
 
   <!-- Back to top button -->
   <div class="topButton topButtonHidden" onclick="window.scrollTo(0, 0)" ;=""></div>
@@ -85,19 +81,20 @@
           <!-- Right side of header (text) -->
           <div class="headerRight">
             <h1 class="jasperTitle">
-              <span class="jasperTitleBold">Jasper Tu</span> is a data-informed product designer passionate about
-              innovation and consumer platforms.
+              <!-- <span class="jasperTitleBold">Jasper Tu</span> is a data-informed product designer passionate about
+              innovation and consumer platforms. -->
+              Under construction 🚧
               <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
             </h1>
             <h2 class="jasperFacts moreDetail">
-              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Recently at
+              <!-- <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Recently at
               <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a> and <a
                 class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a>
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Senior at <a
                 class="fbLinkHeader" href="https://design.ampd.yorku.ca/" target="_blank">York
                 U / Sheridan College Design</a>
-              <br>
+              <br> -->
               <!--<img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
             design internships<br>-->
             </h2>
@@ -121,16 +118,16 @@
             </a>
           </div>-->
 
-            <div class="downButtonContainer">
+            <!--<div class="downButtonContainer">
               <a class="downButton hvr-forward" address="true">
                 Select projects
                 <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button">
               </a>
             </div>
-          </div>
+          </div>-->
 
-          <!-- Jasper illustration -->
-          <img class="headerDrawing" src="./img/peace.png" loading="lazy" alt="Unicorn">
+            <!-- Jasper illustration -->
+            <!--<img class="headerDrawing" src="./img/peace.png" loading="lazy" alt="Unicorn">-->
         </header>
       </div>
     </div>
@@ -143,13 +140,11 @@
         <section class="projects marginTopBottom">
 
           <!-- Facebook Internship -->
-          <article>
+          <!--<article>
             <a class="projectSingle locked" href="fbintern.html">
               <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="FB cover">
               <div class="sec">
                 <h2 class="projectTitle">Facebook Internship <span class="projectArrow">→</span>
-                  <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
-                  alt="Lock">-->
                 </h2>
                 <p class="projectDescription">Designing on the Monetization team to help creators acquire quality deals
                 </p>
@@ -160,10 +155,10 @@
                 </div>
               </div>
             </a>
-          </article>
+          </article>-->
 
           <!-- Jiyu -->
-          <article>
+          <!--<article>
             <a class="projectSingle locked" href="jiyu.html">
               <img class="projectCover" src="./img/jiyu/homeCover-Jiyu.jpeg" loading="lazy" alt="Jiyu cover">
               <div class="sec">
@@ -178,7 +173,7 @@
                 </div>
               </div>
             </a>
-          </article>
+          </article>-->
 
         </section>
       </div>
@@ -186,7 +181,7 @@
   </div>
 
   <!-- Footer -->
-  <footer>
+  <!--<footer>
     <div class="footerContainer">
       <div class="footerLeft">
         <h2 class="projectTitle">
@@ -203,9 +198,6 @@
         <a href="mailto:tu.jasp@gmail.com?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
-          <!--<a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
-            <img class="socialButtonFooter hvr-grow" src="./img/mail.svg" loading="lazy" alt="Email">
-          </a>-->
           <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
             <img class="socialButtonFooter hvr-grow" src="./img/linkedin.svg" loading="lazy" alt="LinkedIn">
           </a>
@@ -221,7 +213,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
 
   <!-- JavaScript -->
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
