--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <!-- <link rel="icon" type="image/png" href="./img/unicornCursor-36px.png"> -->
+  <link rel="icon" type="image/png" href="./img/unicornCursor-36px.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/normalize.css">
